[project]
name = "chaostoolkit-reporting"
dynamic = ["version"]
description = "Chaos Toolkit Reporting"
authors = [
    {name = "Chaos Toolkit Team", email = "contact@chaostoolkit.org"},
]
dependencies = [
    "cairosvg>=2.7.1",
    "chaostoolkit-lib>=1.44.0",
    "click>=8.1.7",
    "dateparser>=1.2.0",
    "jinja2>=3.1.4",
    "matplotlib>=3.9.3",
    "maya>=0.6.1",
    "natural>=0.2.0",
    "pygal>=3.0.5",
    "pypandoc>=1.14",
    "semver>=3.0.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Freely Distributable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
documentation = "https://chaostoolkit.org"
repository = "https://github.com/chaostoolkit/chaostoolkit-reporting"
changelog = "https://github.com/chaostoolkit/chaostoolkit-reporting/blob/master/CHANGELOG.md"

[project.optional-dependencies]
ctk = [
    "chaostoolkit>=1.19.0",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# this exposes the plugin to the chaostoolkit cli
[project.entry-points."chaostoolkit.cli_plugins"]
report = "chaosreport.cli:report"

[tool.pdm]
distribution = true
version = { source = "scm" }

[dependency-groups]
dev = [
    "ruff>=0.8.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
    "requests-mock>=1.12.1",
]

[tool.pdm.scripts]
lint = {composite = ["ruff check chaosreport/"]}
format = {composite = ["ruff check --fix chaosreport/", "ruff format chaosreport/"]}
test = {cmd = "pytest"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-v -rxs --cov chaosreport --cov-report term-missing:skip-covered -p no:warnings"

[tool.ruff]
line-length = 80
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
